Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/CRM_Account_Address_Event_Out__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked to publish Account and Address inserts and updates to Kafka.</description>
    <label>CRM Account Address Event - Out</label>
    <pluralLabel>CRM Account Address Event - Out</pluralLabel>
</CustomObject>