Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/accountSubType__c.field-meta.xml
<CustomField>
    <fullName>accountSubType__c</fullName>
    <label>accountSubType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>