Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/accountType__c.field-meta.xml
<CustomField>
    <fullName>accountType__c</fullName>
    <label>accountType</label>
    <length>225</length>
    <type>Text</type>
</CustomField>