Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>