Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/emailOptin__c.field-meta.xml
<CustomField>
    <fullName>emailOptin__c</fullName>
    <label>emailOptin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>