Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/fax__c.field-meta.xml
<CustomField>
    <fullName>fax__c</fullName>
    <label>fax</label>
    <length>25</length>
    <type>Text</type>
</CustomField>