Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>firstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>