Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>