Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/guardianLastName__c.field-meta.xml
<CustomField>
    <fullName>guardianLastName__c</fullName>
    <label>guardianLastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>