Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/metadata__c.field-meta.xml
<CustomField>
    <fullName>metadata__c</fullName>
    <description>Introduced in Account Canonical 2.0, this is the flexible field that can be used to add new data after approval from Integration Team but does not force any changes to the Event Structure.</description>
    <label>metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>