Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/mobilePhone__c.field-meta.xml
<CustomField>
    <fullName>mobilePhone__c</fullName>
    <label>mobilePhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>