Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <label>postalCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>