Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/prescriberID__c.field-meta.xml
<CustomField>
    <fullName>prescriberID__c</fullName>
    <label>prescriberID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>