Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/primaryPhone__c.field-meta.xml
<CustomField>
    <fullName>primaryPhone__c</fullName>
    <label>primaryPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>