Prod-EU/force-app/main/default/objects/CRM_Account_Address_Event_Out__e/fields/stateProvince__c.field-meta.xml
<CustomField>
    <fullName>stateProvince__c</fullName>
    <label>stateProvince</label>
    <length>100</length>
    <type>Text</type>
</CustomField>